# sockudo

./: Cargo.toml
src/: application.rs  connection.rs  error.rs  log.rs  main.rs  server.rs  websocket.rs
src/channel/: memory_channel_manager.rs  mod.rs
src/handlers/: http.rs  websocket.rs
src/protocol/: events.rs  messages.rs  mod.rs
