[package]
name = "sockudo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
rand = "0.9.0-alpha.2"
hyper-util = "0.1.7"
hyper = "1.4.1"
serde_json = "1.0.127"
async-trait = "0.1.81"
thiserror = "1.0.63"
serde = { version = "1.0.209", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
colored = "2.1.0"
chrono = "0.4.38"
web-socket = "0.7.0"
base64 = "0.21.7"
sha1 = "0.10.6"
futures = "0.3.30"
